plugins {
    id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT' apply false
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.spongepowered.gradle.vanilla'

    def minecraftVersion = project['minecraft_version']

    version = rootProject.version
    group = "${rootProject.group}.vanilla"

    base {
        archivesName = 'effortless-vanilla'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    minecraft {
        version minecraftVersion
        accessWideners file('src/main/resources/effortless.accesswidener') // ${mod_id}

    }

    dependencies {
        implementation project(':common')
        implementation project(':client')

        implementation 'com.google.code.findbugs:jsr305:3.0.2'
    }

}